Fixes chatroom element stacking on small viewports

--- a/src/App.css
+++ b/src/App.css
@@ -350,7 +350,6 @@ p {
 #room-nav #room-list {
     padding: 0;
     align-self: stretch;
-    flex: 1 1 auto;
     font-size: 1rem;
     display: flex;
     justify-content: flex-start;
@@ -399,7 +398,6 @@ p {
 
     #room-nav #room-list li {
         flex: 0 0 8rem;
-        font-size: 0.85em;
     }
 
 }
